@@ -1,3 +1,7 @@
+2026-01-22  Robby Stephenson  <robby@periapsis.org>
+
+	* Added data source for doi.org.
+
 2026-01-21  Robby Stephenson  <robby@periapsis.org>
 
 	* Released Tellico 4.1.5.
